--- a/00-html-css/empleos.html
+++ b/00-html-css/empleos.html
@@ -26,6 +26,23 @@
         <section>
             <h1>Encuentra tu próximo trabajo</h1>
             <p>Explora las últimas ofertas de empleo en el sector tecnológico.</p>
+            <form role="search">
+                <div>
+                    <span>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
+                            class="icon icon-tabler icons-tabler-outline icon-tabler-search">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                            <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0" />
+                            <path d="M21 21l-6 -6" />
+                        </svg>
+                    </span>
+
+                    <input required type="search" placeholder="Buscar empleos por titulo, habilidad o empresa"
+                        aria-label="Buscar empleos">
+                    <button type="submit">Buscar</button>
+                </div>
+            </form>
         </section>
     </main>
 
