--- a/00-html-css/empleos.html
+++ b/00-html-css/empleos.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevJobs - Empleos</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <h2>DevJobs</h2>
@@ -43,11 +45,104 @@
                     <button type="submit">Buscar</button>
                 </div>
             </form>
+            <div class="desplegables">
+                <select name="tecnologia">
+                    <option value="" disabled selected>Tecnologías</option>
+                    <option value="value1">C#</option>
+                    <option value="value2">JavaScript</option>
+                    <option value="value3">Python</option>
+                </select>
+
+                <select name="ubicacion">
+                    <option value="" disabled selected>Ubicación</option>
+                    <option value="value1">Argentina</option>
+                    <option value="value2">España</option>
+                    <option value="value3">México</option>
+                </select>
+
+                <select name="tipoContrato">
+                    <option value="" disabled selected>Tipo de Contrato</option>
+                    <option value="value1">Tiempo Completo</option>
+                    <option value="value2">Medio Tiempo</option>
+                    <option value="value3">Freelance</option>
+                </select>
+
+                <select name="nivelExperiencia">
+                    <option value="" disabled selected>Nivel de Experiencia</option>
+                    <option value="value1">Junior</option>
+                    <option value="value2">Semi-Senior</option>
+                    <option value="value3">Senior</option>
+                </select>
+            </div>
         </section>
+
+        <section id="resultados">
+            <h3>Resultados de búsqueda</h3>
+            <!-- Provisoriamente hardcodeado con ofertas de empleo -->
+            <article>
+                <header>
+                    <h4>Desarrollador Frontend</h4>
+                    <button type="submit">Aplicar</button>
+                </header>
+                <p>Tech Solutions Inc. | Remoto</p>
+                <p>Buscamos un desarrollador frontend con experiencia en Desarrollo web y
+                    conocimientos en JavaScript, React y Node.js. El candidato ideal debe
+                    ser capaz de trabajar en equipo y tener buenas habilidades de comunicación.</p>
+            </article>
+
+            <article>
+                <header>
+                    <h4>Analista de Datos</h4>
+                    <button type="submit">Aplicar</button>
+                </header>
+                <p>Data Insights LLC | Híbrido | Ciudad de México</p>
+                <p>Buscamos un analista de datos con experiencia en análisis de datos y
+                    conocimientos en SQL, Python y herramientas de visualización de datos.
+                    El candidato ideal debe ser capaz de trabajar en equipo y tener buenas
+                    habilidades de comunicación.</p>
+            </article>
+
+            <article>
+                <header>
+                    <h4>Desarrollador de Aplicaciones Móviles</h4>
+                    <button type="submit">Aplicar</button>
+                </header>
+                <p>Mobile Solutions Inc. | Remoto</p>
+                <p>Buscamos un desarrollador de aplicaciones móviles con experiencia en
+                    desarrollo de aplicaciones iOS y Android. El candidato ideal debe tener
+                    conocimientos en Swift, Kotlin y frameworks de desarrollo móvil.</p>
+            </article>
+
+            <article>
+                <header>
+                    <h4>Ingeniero DevOps</h4>
+                    <button type="submit">Aplicar</button>
+                </header>
+                <p>Cloud Solutions Inc. | Híbrido | Buenos Aires</p>
+                <p>Buscamos un ingeniero DevOps con experiencia en implementación de soluciones en la nube y
+                    conocimientos en AWS, Docker y Kubernetes. El candidato ideal debe ser capaz de trabajar en equipo y
+                    tener buenas
+                    habilidades de comunicación.</p>
+            </article>
+
+            <nav aria-label="Paginación" class="paginacion">
+                <ul>
+                    <li><a href="#">&lt;</a></li>
+                    <li><a href="#" class="active">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li><a href="#">5</a></li>
+                    <li><a href="#">&gt;</a></li>
+                </ul>
+            </nav>
+        </section>
+
     </main>
 
     <footer>
         <small>&copy; 2025 DevJobs. Todos los derechos reservados.</small>
     </footer>
 </body>
+
 </html>
