--- a/00-html-css/empleos.html
+++ b/00-html-css/empleos.html
@@ -4,17 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explora las últimas ofertas de empleo para desarrolladores en DevJobs.
+    Encuentra oportunidades laborales en tecnología, programación y desarrollo web.">
     <title>DevJobs - Empleos</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
-        <h2>DevJobs</h2>
+        <h1>
+            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <polyline points="16 18 22 12 16 6"></polyline>
+                <polyline points="8 6 2 12 8 18"></polyline>
+            </svg>
+            DevJobs
+        </h1>
 
         <nav>
             <a href="index.html">Inicio</a>
-            <a href="empleos.html">Empleos</a>
+            <a href="empleos.html" class="active">Empleos</a>
         </nav>
 
         <div>
