--- a/01-javascript/empleos.html
+++ b/01-javascript/empleos.html
@@ -8,7 +8,7 @@
     Encuentra oportunidades laborales en tecnología, programación y desarrollo web.">
     <title>DevJobs - Empleos</title>
     <link rel="stylesheet" href="styles.css">
-    <script async src="./script.js"></script>
+    <script type="module" src="./main.js"></script>
 </head>
 
 <body>
@@ -50,51 +50,46 @@
                         </svg>
                     </span>
 
-                    <input required type="search" placeholder="Buscar empleos por titulo, habilidad o empresa"
-                        aria-label="Buscar empleos">
+                    <input id="empleos-search-input" required type="search"
+                        placeholder="Buscar empleos por titulo, habilidad o empresa" aria-label="Buscar empleos">
                     <button type="submit">Buscar</button>
                 </div>
 
                 <div class="desplegables">
-                    <select name="tecnologia" id="filter-technology">
-                        <option value="" disabled selected>Tecnologías</option>
-                        <option value="value1">C#</option>
-                        <option value="value2">JavaScript</option>
-                        <option value="value3">Python</option>
-                        <option value="value4">Java</option>
-                        <option value="value5">Ruby</option>
-                        <option value="value6">PHP</option>
-                        <option value="value7">C++</option>
+                    <select name="technology" id="filter-technology">
+                        <option value="">Tecnología</option>
+                        <optgroup label="Tecnologías populares">
+                            <option value="javascript">JavaScript</option>
+                            <option value="python">Python</option>
+                            <option value="react">React</option>
+                            <option value="nodejs">Node.js</option>
+                        </optgroup>
+                        <option value="java">Java</option>
+                        <hr />
+                        <option value="csharp">C#</option>
+                        <option value="c">C</option>
+                        <option value="c++">C++</option>
+                        <hr />
+                        <option value="ruby">Ruby</option>
+                        <option value="php">PHP</option>
                     </select>
 
-                    <select name="ubicacion">
-                        <option value="" disabled selected>Ubicación</option>
-                        <option value="value1">Argentina</option>
-                        <option value="value2">España</option>
-                        <option value="value3">México</option>
-                        <option value="value4">Colombia</option>
-                        <option value="value5">Chile</option>
-                        <option value="value6">Perú</option>
-                        <option value="value7">Remoto</option>
+                    <select name="location" id="filter-location">
+                        <option value="">Ubicación</option>
+                        <option value="remoto">Remoto</option>
+                        <option value="cdmx">Ciudad de México</option>
+                        <option value="guadalajara">Guadalajara</option>
+                        <option value="monterrey">Monterrey</option>
+                        <option value="barcelona">Barcelona</option>
+                        <option value="bsas">Buenos Aires</option>
                     </select>
 
-                    <select name="tipoContrato">
-                        <option value="" disabled selected>Tipo de Contrato</option>
-                        <option value="value1">Tiempo Completo</option>
-                        <option value="value2">Medio Tiempo</option>
-                        <option value="value3">Freelance</option>
-                        <option value="value4">Pasantía</option>
-                    </select>
-
-                    <select name="nivelExperiencia">
-                        <option value="" disabled selected>Nivel de Experiencia</option>
-                        <option value="value0">Trainee</option>
-                        <option value="value1">Junior</option>
-                        <option value="value2">Semi-Senior</option>
-                        <option value="value3">Senior</option>
-                        <option value="value4">Lead</option>
-                        <option value="value5">Director</option>
-                        <option value="value6">C-Level</option>
+                    <select name="experience-level" id="filter-experience-level">
+                        <option value="">Nivel de experiencia</option>
+                        <option value="junior">Junior</option>
+                        <option value="mid">Mid-level</option>
+                        <option value="senior">Senior</option>
+                        <option value="lead">Lead</option>
                     </select>
                 </div>
             </form>
@@ -104,7 +99,7 @@
             <h3>Resultados de búsqueda</h3>
             <!-- Provisoriamente hardcodeado con ofertas de empleo -->
             <div class="jobs-listings">
-                <article class="job-listing-card">
+                <!-- <article data-technology="javascript" data-modalidad="remoto" class="job-listing-card">
                     <header>
                         <h4>Desarrollador Frontend</h4>
                         <button class="button-apply-job" type="submit">Aplicar</button>
@@ -115,7 +110,7 @@
                         ser capaz de trabajar en equipo y tener buenas habilidades de comunicación.</p>
                 </article>
 
-                <article class="job-listing-card">
+                <article data-technology="python" data-modalidad="hibrido" class="job-listing-card">
                     <header>
                         <h4>Analista de Datos</h4>
                         <button class="button-apply-job" type="submit">Aplicar</button>
@@ -127,7 +122,7 @@
                         habilidades de comunicación.</p>
                 </article>
 
-                <article class="job-listing-card">
+                <article data-technology="ios" data-modalidad="remoto" class="job-listing-card">
                     <header>
                         <h4>Desarrollador de Aplicaciones Móviles</h4>
                         <button class="button-apply-job" type="submit">Aplicar</button>
@@ -138,7 +133,7 @@
                         conocimientos en Swift, Kotlin y frameworks de desarrollo móvil.</p>
                 </article>
 
-                <article class="job-listing-card">
+                <article data-technology="docker" data-modalidad="argentina" class="job-listing-card">
                     <header>
                         <h4>Ingeniero DevOps</h4>
                         <button class="button-apply-job" type="submit">Aplicar</button>
@@ -149,7 +144,8 @@
                         equipo y
                         tener buenas
                         habilidades de comunicación.</p>
-                </article>
+                </article> -->
+                <!-- Los artículos de empleo se generarán dinámicamente aquí -->
             </div>
             <nav aria-label="Paginación" class="paginacion">
                 <a href="#"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
