Filtro por Nivel y Tecnología, paginación dinámica

--- a/01-javascript/empleos.html
+++ b/01-javascript/empleos.html
@@ -73,6 +73,7 @@
                         <hr />
                         <option value="ruby">Ruby</option>
                         <option value="php">PHP</option>
+                        <option value="mobile">Mobile</option>
                     </select>
 
                     <select name="location" id="filter-location">
